Prevent scroll/bounce on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,11 @@
 a {text-decoration: none;}
 p {margin: 0;}
 
+body{
+  position: fixed;
+  overflow: hidden;
+}
+
 .App {
   display: grid;
   grid-template-columns: repeat(3, calc(100% + 3rem));
