--- a/src/components/lightbox/lightbox.scss
+++ b/src/components/lightbox/lightbox.scss
@@ -12,6 +12,7 @@
         background: white;
         img{
         width: 100vw;
+        height: 100%;
         }
     }
     .lightbox-progress{
